fix: use the Scrollable behavior in timeline
Replace the native scrollbar with a custom one in the timeline to make the timeline's width correspond to that of the waveform

--- a/src/css/editor/Controller.less
+++ b/src/css/editor/Controller.less
@@ -152,12 +152,12 @@
 
     .bottom {
         flex: 1;
-        overflow-x: hidden;
-        overflow-y: scroll;
+        overflow: hidden;
 
-        .bottom-wrapper{
+        .bottom-content-wrapper{
             display: flex;
             flex-direction: row;
+            overflow-x: hidden;
 
             .timeline-handles {
                 width: 10em;
